# imap-lo

./: .gitignore  fetchLoGtInput_l1a_de.sh  fetchLoGtInputs.sh  log_20260221.txt  sizes.txt  update.sh  update_1S05.sh  update_1S08.sh  update_1S09.sh  update_1S10.sh  update_1S11.sh  update_1S13-14.sh  update_sync.sh
1R07_CDF_l1c_position_velocity/: driver.sh  l1c_reader.py  l1c_reader_V2.py  runIMAP-fmv1-read-l1c.sh
1S02-CDF-l1b-histRates/: driver.sh  hist_convert.py  runIMAP-fmv1-convert-hist.sh
1S02-CDF-l1b-monitorRates/: driver.sh  monitor_convert.py  report.txt  runIMAP-fmv1-convert-monitor.sh
1S04_l1b_histRates_autogoodtimes/: driver.sh  hist_auto_gt.py  hist_auto_gt_V2.py  hist_auto_gt_V3.py  hist_auto_gt_new.py  runIMAP-fmv1-autogt.sh
1S05_l1b_histRates_plots/: driver.sh  hist_auto_gt.txt  hist_auto_plots.py  runIMAP-fmv1-autogt.sh
1S06_l1b_prostar_plots/: driver.sh  log.txt  runIMAP-fmv1-prostar.sh  star_cdf.py
1S07_CDF_l1c_position_velocity/: driver.sh  imap_meta.tm  l1c_reader.py  l1c_reader_V2.py  report.txt  runIMAP-fmv1-read-l1c.sh
1S08_TOFreport_AllTimes/: driver.sh  read_de.py  report.txt  runIMAP_fmv1_read_l1b_de.sh  showIMAPLo-DE-1DTOF_V2.py  showIMAPLo-DE-2DTOF_V2.py  showIMAPLo-DE-delay_V2.py
1S09_TOFreport_Goodtimes/: driver.sh  read_de.py  runIMAP-emv3-instrument-report.sh  runIMAP_fmv1_read_l1b_de.sh  showIMAPLo-DE-CheckDist1D_V1.py
1S10_histrates_Goodtimes/: driver.sh  hist_convert.py  runIMAP-fmv1-convert-hist.sh
1S11_CDF_l1c_pseval/: cnts_v1_pset.py  driver.sh  old.py  runIMAP-fmv1-read-l1c.sh
1S12_TOFideas/: driver.sh  log  read_de.py  runIMAP-emv3-instrument-report.sh  runIMAP_fmv1_read_l1b_de.sh  runs.sh  showIMAPLo-DE-1D-spinbin.py  showIMAPLo-DE-1DTOF_V2.py  showIMAPLo-DE-2DTOF_V2.py  showIMAPLo-DE-CheckDist1D_V1.py  showIMAPLo-DE-delay_V2.py  tofShift-Hunt-DE-TOF_V1.py
1S13_TOFspinbin/: driver.sh  read_de.py  read_de_CO.py  read_de_H.py  showIMAPLo-DE-2DTOF_V2.py  showIMAPLo-DE-CheckDist1D_V1.py  showIMAPLo-DE-delay_V2.py
1S14_l1b_histogram_spinangle/: l1b_to_spin.py
1S15_TOFspinbin_goodtime/: driver.sh  read_de.py  read_de_CO.py  read_de_H.py  runIMAP_fmv1_read_l1b_de.sh  showIMAPLo-DE-1DTOF_V2.py
1S16_l1b_histogram_spinangle_goodtime/: l1b_to_spin.py
1S17_l1a_TOFspinbin/: driver.sh  read_de.py  read_de_CO.py  read_de_H.py  runIMAP_fmv1_read_l1a_de.sh  tof_de_dn_to_eu_H.py
1S18_l1a_TOFspinbin_histogramFilter/: read_de.py  read_de_CO.py  read_de_H.py  runIMAP-emv3-instrument-report.sh
1S19_l1b_histRates_autogoodtimes_diag/: driver.sh  driver.txt  hist_auto_gt.py  runIMAP-fmv1-autogt.sh
1S20_TOFspinbin_hires_0.3/: driver.sh  read_de.py  showIMAPLo-DE-1D-spinbin.py
1S21_TOFspinbin_hires_0.6/: driver.sh  read_de.py  runIMAP_fmv1_read_l1b_de.sh
1S22_TOFspinbin_hires_1.2/: driver.sh  read_de.py
1S23_TOFspinbin_hires_1.2_goodtimes/: driver.sh  read_de.py  runIMAP_fmv1_read_l1b_de.sh
3S2_l1b_histRates_autoram/: driver.sh  hist_auto_gt.py~  hist_auto_gt.txt  hist_auto_ram.py  hist_auto_ram_V2.py  runIMAP-fmv1-auto_ram.sh
3S2_l1b_quickmaps/: batch_run_days.sh  csv2yaml.py  csv_to_soc.py  l1b_to_spin.py  map_SCFrame.py  plot_map_DN.py  readme.txt
mapping_visualization_code/isoc_viz/bla/: Makefile.am  Makefile.in  bin_angle_list.pro  bin_hi_refresh.pro  bin_lo_refresh.pro  bin_outer_map.pro  cbar_work.pro  charge_exchange_H.pro  color_scaling.pro  color_scaling_new.pro  colorbar_ticks.pro  compare_fc_files.pro  compare_mb_files.sh  compare_me_bin_maps.pro  dlegdtheta.pro  dump_me_bin_map.pro  eval_var_eq_value_pair.pro  extra_axes.pro  font_sizing.pro  fsc_color.pro  genPlot.pro  histogram2.pro  idl_devel.sh  idl_map2png.sh  idl_map2zpng.sh  idl_quiet.sh  idl_saver.sh  idl_txt2png.sh  imdisp.pro  jena_cases.pro  kappa_dist.pro  kwproc.pro  legend.pro  linemask.pro  loadaltct.pro  make_colorbar.pro  make_colorbar2.pro  make_colorbar_orig.pro  make_jpeg_from_x.pro  make_me_bin_map.pro  (+49 more)
(+81 files in other folders)
